Update extension view and close on click

--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Scroll to Bottom Extension</title>
+  <title>Tanja's TikTok Raffler</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f2f5;
+      margin: 0;
+      padding: 0;
+    }
+    h1 {
+      color: #ff0066;
+      text-align: center;
+      margin-top: 20px;
+    }
+    #find-winner {
+      background-color: #ff0066;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      display: block;
+      margin: 0 auto;
+      margin-top: 20px;
+      font-weight: bold;
+    }
+    #find-winner:hover {
+      background-color: #cc0052;
+    }
+  </style>
   <script src="finder.js"></script>
 </head>
 <body>
-    <h1>Tanja's TikTok Raffler</h1>
-  <button id="find-winner">Scroll to Bottom</button>
+  <h1>Tanja's TikTok Raffler</h1>
+  <button id="find-winner">FIND VINDER</button>
 </body>
 </html>
